--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body class="bg-indigo-950 text-white  ">
 
         <header>
-                <nav class="container mx-auto flex justify-between items-center">
+                <nav class="container">
 
                         <div class="w-20 py-5 px-4 text-orange-600 text-4xl font-bold">
                                 <a href=""><span class="text-white ">Shahad</span>SV</a>
